tests/buffer/errors/buffer_set_value_range.dby
import std.buffer as buf
let b = buf.new(1)
buf.set(b, 0, 256)
